started work on contact section, added tilt to projects, changed footer a bit

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     <title>SAITS - Something About IT Security</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
+<!-- Realizacja: BM -->
   </body>
 </html>
