--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name=”robots” content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Koło naukiwe SAITS - Something About IT Politechniki Rzeszowskiej. Jesteśmy grupą studentów zainteresowanych bezpieczeństwem systemów i sieci komputerowych, testami penetracyjnymi, ochroną tożsamości i bezpieczeństwem informacji. Działamy na Politechnice Rzeszowskiej od 2012 roku. ">
     <title>SAITS - Something About IT Security</title>
   </head>
   <body>
